examples/test/testpolicy13668.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13668
  namespace: namespace225
spec:
  podSelector:
    matchLabels:
      key9: value9
      key29: value49
      key31: value26
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key33: value20
          key2: value2
      podSelector:
        matchLabels:
          key39: value12
          key49: value10
